# vibtest

./: .gitignore  LICENSE  README.md  pyproject.toml
res/lab_1/: DPsv00000.mat  DPsv00001.mat  DPsv00002.mat  DPsv00003.mat  DPsv00004.mat  DPsv00005.mat  DPsv00006.mat  DPsv00007.mat  DPsv00008.mat
res/lab_2/: DPsv00000.mat  DPsv00001.mat  DPsv00002.mat  DPsv00003.mat  DPsv00004.mat  DPsv00005.mat  DPsv00006.mat  DPsv00007.mat  DPsv00008.mat  DPsv00009.mat  DPsv00010.mat  DPsv00011.mat  DPsv00012.mat  DPsv00013.mat  DPsv00014.mat  DPsv00015.mat  DPsv00016.mat  DPsv00017.mat  DPsv00018.mat  DPsv00019.mat  DPsv00020.mat  DPsv00021.mat  DPsv00022.mat  DPsv00023.mat  DPsv00024.mat  DPsv00025.mat  DPsv00026.mat  DPsv00027.mat  DPsv00028.mat  DPsv00029.mat  DPsv00030.mat  DPsv00031.mat  DPsv00032.mat  DPsv00033.mat  DPsv00034.mat  DPsv00035.mat  DPsv00036.mat  DPsv00037.mat  DPsv00038.mat  DPsv00039.mat  (+36 more)
src/vibtest/: MECA0062_Ernotte.py  __init__.py  labdata.py  mdof.py  mplrc.py  sdof.py  structural.py
src/vibtest/project/: __init__.py  comparison.py  constant.py  data.py  detailed_ema.py  part_1.py  part_2.py  part_3.py  part_4.py  preliminary_ema.py  statement.py
src/vibtest/util/: __init__.py  labdata.py  mplrc.py
